upgrades java version to 21, spring-boot version to 3.2.5